--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.1",
+    "framer-motion": "^11.0.3",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.3",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "axios": "^1.6.1",
-    "moment": "^2.30.1",
     "react-toastify": "^9.1.3",
+    "web-vitals": "^2.1.4",
     "web3": "^1.9.0"
   },
   "scripts": {
